--- a/openstreetmap/SaigonOSM.ipynb
+++ b/openstreetmap/SaigonOSM.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -49,14 +49,13 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "path = \"E:/Work/Education/Udacity Nanodegree/Pproj/P3 DW/OPSM/\"\n",
-    "Image(filename = path + \"saigon.JPG\")"
+    "Image(filename = \"saigon.JPG\")"
    ]
   },
   {
@@ -86,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -126,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -226,7 +225,7 @@
     "    return data\n",
     "            \n",
     "\n",
-    "nodes_tags = nodes_tags_data(saigon_osm, 'node')\n"
+    "nodes_tags = nodes_tags_data(saigon_osm, 'node')"
    ]
   },
   {
